# dotfiles

./: .bash_aliases  .bash_prompt  .bashrc  .conkyrc  .gitconfig  .screenrc  .vimrc  actualiza.sh  install_packages.sh  pyproject.toml
.config/terminator/: config
