[tool.poetry]
name = "myProject"
version = "0.1.0"
description = ""
authors = ["pixelead0"]

[tool.poetry.dependencies]
fastapi = "^0.88.0"
pydantic = "^1.10.2"
pyjwt = "^2.6.0"
python = "^3.10"
python-dotenv = "^0.21.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
faker = "^26.0.0"
fakeredis = "^2.23.3"
flake8 = "^6.1.0"
httpcore = "^1.0.5"
httpx = "^0.27.0"
isort = "^5.11.3"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-sugar = "^1.0.0"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.2"
trio = "^0.26.0"
twisted = "^24.3.0"

# Configuración de cobertura
[tool.coverage.run]
omit = ["pb/*", "tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 50
exclude_lines = ["pragma: not covered", "@overload"]

# Configuración de pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:The 'app' shortcut is now deprecated:DeprecationWarning"
]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | migrations
  | pb
)/
'''

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
skip_glob = ["src/blib2to3", "tests/data", "profiling", "pb"]
known_first_party = ["black", "blib2to3", "blackd", "_black_version"]

[tool.flake8]
max-line-length = 100
select = ["E", "F", "W", "C90"]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
exclude = ["__pycache__", "migrations", ".venv", "build", "dist", "pb"]
max-complexity = 10
show-source = true
statistics = true
count = true
